apps/security/oauth2-proxy/app/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: oauth-proxy
  namespace: security
spec:
  chain:
    middlewares:
      - name: oauth-proxy-redirect
      - name: oauth-proxy-error
      - name: oauth-proxy-forward
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: oauth-proxy-error
  namespace: security
spec:
  errors:
    status:
      - "401"
    service:
      name: oauthproxy
      port: 80
    query: "/oauth2/sign_in"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: oauth-proxy-forward
  namespace: security
spec:
  forwardAuth:
    address: http://oauthproxy.security.svc.cluster.local:80/oauth2/auth
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - Set-Cookie
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: oauth-proxy-redirect
  namespace: security
spec:
  redirectRegex:
    regex: ^.*/oauth2/(.*)
    replacement: https://oauth.lucadev.de/oauth2/${1}
