apps/security/oauth2-proxy/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oauth2-proxy-prefix
  namespace: security
spec:
  entryPoints:
    - websecure
  routes:
    - match: PathPrefix(`/oauth2/`) && !Host(`idm.home.lucadev.de`)
      kind: Rule
      priority: 100
      services:
        - name: oauthproxy
          port: 80
